golden/error/parse_unmatched_lparen.test
(1 1)

# output:
 --> stdin:1:3
  |
1 | (1 1)
  |    ^
Error: Expected ')'.

 --> stdin:1:0
  |
1 | (1 1)
  | ^
Note: Unmatched '(' opened here.
